<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_madgwick</name>
  <version>0.0.0</version>
  <description>Takes in raw Imu data (acc+gyro) and Magnetometer readings -> returns the orientation in quaternions</description>
  <maintainer email="spereira@ethz.ch">sebi</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
